# NcnnDsm

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: demo.cfg  dsm.cfg
app/src/main/assets/models/cifar_action/: cifar10_quick_action.caffemodel  cifarActionDeploy.prototxt  mean.binaryproto
app/src/main/assets/models/cifar_atten/: cifar10_quickLR_iter.caffemodel  cifarLRDeploy.prototxt  mean.binaryproto
app/src/main/assets/models/cifar_detect/: detect_deploy.caffemodel  detect_deploy.prototxt  detect_deploy_v1.caffemodel
app/src/main/assets/models/cifar_eye/: cifar10_quickEye_iter.caffemodel  cifarEyeDeploy.prototxt  mean.binaryproto
app/src/main/assets/models/cifar_glass/: cifar10_quick_iter.caffemodel  cifarGlassDeploy.prototxt  mean.binaryproto
app/src/main/assets/models/cifar_mouth/: cifar10_quick_iter.caffemodel  cifarOpenDeploy.prototxt  mean.binaryproto
app/src/main/assets/models/dsm_ncnn/: detect_deploy.param
app/src/main/assets/models/face_slim/: face.param
app/src/main/cpp/: Log.h  algo_native.cpp  algo_native.h  alpu.h  native_inf.h
app/src/main/cpp/algo/: algo.cpp  algo.h  classifier.cpp  classifier.h  detectNcnn.cpp  detectNcnn.h  objectDetect.cpp  objectDetect.hpp
app/src/main/cpp/algo/kcf/: fhog.cpp  kcftracker.cpp  kcftracker.hpp
app/src/main/cpp/algo/mtcnn/: mtcnn.cpp  mtcnn.h
app/src/main/cpp/glhelper/: glDraw.cpp  glDraw.h
app/src/main/java/com/dsm/: AlgoInterface.java  AlgoService.java  AvcEncoder.java  CameraPreview.java  MainActivity.java  Size.java
app/src/main/java/com/dsm/bean/: ActionTable.java  AlarmState.java
app/src/main/java/com/media/: MediaPlayor.java  SoundPlayer.java  SoundTable.java
app/src/main/java/com/orm/db/assit/: SQLBuilder.java
app/src/main/java/com/orm/db/impl/: CascadeSQLiteImpl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
include/: Log.h
include/glog/: config.h
include/opencv2/: cvconfig.h
include/snpe/: DlEnums.hpp  DlOptional.hpp  DlVersion.hpp  IDlContainer.hpp  PlatformConfig.hpp  SNPE.hpp  SNPEAPI.h  SNPEBuilder.hpp  SNPEFactory.hpp  TensorShapeMap.hpp  UDLFunc.hpp
